# ctclsite-rust

./: .cargo-remote.toml  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  RELEASES.md  TODO.md  build  cargo.toml  config.toml  config.txt  mkrelease  out.txt  runner  runner_dev  runner_prod  target  themes.json
.cargo/: config.toml
config/: config.json  main_about.md  main_contact.md  main_index.csv  main_main.md  main_privacy.md  pagemeta.csv
config/about/: about_privacy.md  config.json  history.md  index.csv  licensing.md  privacy.md  privacy_old.md  tos.md
config/bcc_cc/: config.json
config/bcc_tc/: config.json
config/blog/: blogpost_1.md  blogpost_2.md  blogpost_3.md  config.json  index.csv
config/linklist/: config.json
config/projects/: cams.md  codenames.md  config.json  config.old.json  contactlist.md  ctclsite.md  index.csv  mathpad.md  mct_1.md  mct_2.md  naming.md  netkart.md  nonmono.md  p2maps.md  pc_pbt.md  pc_pc.md  pc_pe.md  pc_pet.md  pc_pet2.md  pc_pmma.md  pc_pp.md  pc_pp2.md  pc_r12.md  pc_tbm.md  pc_thc.md  slag.md  srv_amp.md  srv_dxm.md  srv_prm.md  srv_vc.md  todokiosk.md
config/ramlist/: README.md  config.json  id_guide.md  index.csv  list_index.csv  menu.csv  rl_about.md
config/services/: config.json
docs/: README.md  pages.md  sections.md
logs/: client_latest.csv
src/: app.rs  build.rs  build_old.rs  lib.rs  log.rs  main.rs  route.rs
src/about/: about.rs  mod.rs
src/js/: clientinfo.js  common.js  vids.js
src/logger/: middleware.rs  mod.rs
src/middleware/: mod.rs
src/page/: loader.rs  mod.rs  rss.rs
src/route/: mod.rs
src/routes/: mod.rs
src/styling/: _colors.css  (+9 more)
static/: clientinfo.js  common.js  robots.txt
templates/: about_header.html  about_main.html  about_md.html  about_md_pp.html  bcc_tc.html  blog_menu.html  blog_post.html  content.html  debug.html  docs.html  err_404.html  fileviewer.html  footer.html  header.html  header_nojs.html  header_nonav.html  linklist.html  main_content.html  main_css.css  main_footer.html  main_header.html  main_privacy.html  navbar.html  pagebutton.html  projects_content.html  projects_menu.html  projects_page.html  ramlist.css  rl_about.html  rl_error.html  rl_footer.html  rl_header.html  rl_list.html  rl_log.html  rl_menu.html  sections.html  services_main.html  styling.css
(+583 files in other folders)
