[package]
name = "ctclsite"
version = "1.1.0"
license = "MIT"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
grass = "0.13.2"
grass_compiler = "0.13.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
comrak = "0.21.0"
html-minifier = "5.0.0"
log = "0.4.20"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simple-logging = "2.0.2"
tera = "1.19.1"