[package]
name = "ctclsite"
version = "1.8.0"
license = "MIT"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
chrono = "0.4.35"
gethostname = "0.4.3"
grass = "0.13.2"
grass_compiler = "0.13.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
minifier = "0.3.0"
image = "0.24.9"
hex = "0.4.3"

[dependencies]
actix-files = "0.6.5"
actix-service = "2.0.2"
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
chrono = "0.4.35"
comrak = "0.21.0"
csv = "1.3.0"
futures-util = "0.3.30"
html-minifier = "5.0.0"
indexmap = { version = "2.2.5", features = ["serde"] }
json-objects-to-csv = "0.1.3"
lazy_static = "1.4.0"
log = "0.4.20"
memcache = "0.17.2"
minify-html-onepass = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
sha256 = "1.5.0"
simple-logging = "2.0.2"
tera = "1.19.1"
