[package]
name = "ctclsite"
version = "2.1.0"
license = "MIT"
edition = "2021"
#build = "src/build.rs"

[dependencies]
actix-files = "0.6.5"
actix-service = "2.0.2"
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
chrono = "0.4.35"
comrak = "0.21.0"
csv = "1.3.0"
futures-util = "0.3.30"
hex = "0.4.3"
image = "0.24.9"
indexmap = { version = "2.2.5", features = ["serde"] }
json-objects-to-csv = "0.1.3"
lazy_static = "1.4.0"
log = "0.4.22"
memcache = "0.17.2"
minifier = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
serde-loader = { version = "0.2.0", features = ["json"] }
sha256 = "1.5.0"
simple-logging = "2.0.2"
syn = "2.0.77"
tera = { version = "1.19.1", features = ["builtins"] }
walkdir = "2.5"
